[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Batool Malkawi <batoolmalkawii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
jupyterlab = "^2.2.9"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
